--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
@@ -9,16 +9,16 @@
 //	```
 //------------------------------------------------------------------------------
 
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
+
 .ui_button
 {
 	display: inline-block;
 	border-radius: var(--radius-sm);
 	padding: var(--spacing-sm) var(--spacing-lg);
 	cursor: pointer;
-	transition:
-		background-color 0.3s 0s ease-in-out,
-		color 0.3s 0s ease-in-out,
-		border-color 0.3s 0s ease-in-out;
+	transition: all 0.3s 0s ease-in-out;
 
 
 	//--------------------------------------------------------------------------
@@ -42,224 +42,43 @@
 	//	Colors and Styles
 	//--------------------------------------------------------------------------
 
-	&.primary
+	@each $color in themes.$theme_colors
 	{
-		background-color: var(--color-primary);
-		color: var(--color-primary-text);
-
-		&:hover:not(:disabled)
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}
 		{
-			background-color: var(--color-primary-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-primary);
+			background-color: var(--color-#{$color});
+			color: var(--color-#{$color}-text);
 
 			&:hover:not(:disabled)
 			{
-				background-color: transparent;
-				color: var(--color-primary-light);
+				background-color: var(--color-#{$color}-dark);
 			}
-		}
 
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-primary);
-			border: 1px solid var(--color-primary);
-
-			&:hover:not(:disabled)
+			&.text
 			{
 				background-color: transparent;
-				color: var(--color-primary-light);
-				border-color: var(--color-primary-light);
+				color: var(--color-#{$color});
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-#{$color}-light);
+				}
 			}
-		}
-	}
 
-	&.secondary
-	{
-		background-color: var(--color-secondary);
-		color: var(--color-secondary-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-secondary-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-secondary);
-
-			&:hover:not(:disabled)
+			&.outlined
 			{
 				background-color: transparent;
-				color: var(--color-secondary-light);
-			}
-		}
+				color: var(--color-#{$color});
+				border: 1px solid var(--color-#{$color});
 
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-secondary);
-			border: 1px solid var(--color-secondary);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-secondary-light);
-				border-color: var(--color-secondary-light);
-			}
-		}
-	}
-
-	&.error
-	{
-		background-color: var(--color-error);
-		color: var(--color-error-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-error-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-error);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-error-light);
-			}
-		}
-
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-error);
-			border: 1px solid var(--color-error);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-error-light);
-				border-color: var(--color-error-light);
-			}
-		}
-	}
-
-	&.warning
-	{
-		background-color: var(--color-warning);
-		color: var(--color-warning-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-warning-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-warning);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-warning-light);
-			}
-		}
-
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-warning);
-			border: 1px solid var(--color-warning);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-warning-light);
-				border-color: var(--color-warning-light);
-			}
-		}
-	}
-
-	&.info
-	{
-		background-color: var(--color-info);
-		color: var(--color-info-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-info-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-info);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-info-light);
-			}
-		}
-
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-info);
-			border: 1px solid var(--color-info);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-info-light);
-				border-color: var(--color-info-light);
-			}
-		}
-	}
-
-	&.success
-	{
-		background-color: var(--color-success);
-		color: var(--color-success-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-success-dark);
-		}
-
-		&.text
-		{
-			background-color: transparent;
-			color: var(--color-success);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-success-light);
-			}
-		}
-
-		&.outlined
-		{
-			background-color: transparent;
-			color: var(--color-success);
-			border: 1px solid var(--color-success);
-
-			&:hover:not(:disabled)
-			{
-				background-color: transparent;
-				color: var(--color-success-light);
-				border-color: var(--color-success-light);
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-#{$color}-light);
+					border-color: var(--color-#{$color}-light);
+				}
 			}
 		}
 	}
