--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
@@ -13,6 +13,9 @@
 //	```
 //------------------------------------------------------------------------------
 
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
+
 .ui_button_group
 {
 	display: inline-flex;
@@ -24,10 +27,7 @@
 		display: inline-block;
 		padding: var(--spacing-sm) var(--spacing-lg);
 		cursor: pointer;
-		transition:
-			background-color 0.3s 0s ease-in-out,
-			color 0.3s 0s ease-in-out,
-			border-color 0.3s 0s ease-in-out;
+		transition: all 0.3s 0s ease-in-out;
 
 		&:first-child
 		{
@@ -120,486 +120,85 @@
 	//	Colors and Styles
 	//--------------------------------------------------------------------------
 
-	&.primary
+	@each $color in themes.$theme_colors
 	{
-		> button, a
-		{
-			background-color: var(--color-primary);
-			color: var(--color-primary-text);
-
-			&:not(:last-child)
-			{
-				border-color: var(--color-primary-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-primary-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-primary-dark);
-				border-color: var(--color-primary-light);
-
-				&:hover
-				{
-					color: var(--color-primary-light);
-				}
-			}
-		}
-
-		&.text
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}
 		{
 			> button, a
 			{
-				background-color: transparent;
-				color: var(--color-primary);
+				background-color: var(--color-#{$color});
+				color: var(--color-#{$color}-text);
+
+				&:not(:last-child)
+				{
+					border-color: var(--color-#{$color}-dark);
+				}
 
 				&:hover:not(:disabled)
 				{
-					background-color: transparent;
-					color: var(--color-primary-light);
+					background-color: var(--color-#{$color}-dark);
 				}
 
 				&.active
 				{
-					border-color: var(--color-primary-dark);
-				}
-			}
-		}
+					background-color: var(--color-#{$color}-dark);
+					border-color: var(--color-#{$color}-light);
 
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-primary);
-				border-color: var(--color-primary);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-primary-light);
-					border-color: var(--color-primary-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-primary);
-					color: var(--color-primary-text);
-					border-color: var(--color-primary-light);
-
-					&:hover:not(:disabled)
+					&:hover
 					{
-						background-color: var(--color-primary);
-						color: var(--color-primary-light);
-						border-color: var(--color-primary-light);
+						color: var(--color-#{$color}-light);
 					}
 				}
 			}
-		}
-	}
 
-	&.secondary
-	{
-		> button, a
-		{
-			background-color: var(--color-secondary);
-			color: var(--color-secondary-text);
-
-			&:not(:last-child)
+			&.text
 			{
-				border-color: var(--color-secondary-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-secondary-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-secondary-dark);
-				border-color: var(--color-secondary-light);
-
-				&:hover
-				{
-					color: var(--color-secondary-light);
-				}
-			}
-		}
-
-		&.text
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-secondary);
-
-				&:hover:not(:disabled)
+				> button, a
 				{
 					background-color: transparent;
-					color: var(--color-secondary-light);
-				}
-
-				&.active
-				{
-					border-color: var(--color-secondary-dark);
-				}
-			}
-		}
-
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-secondary);
-				border-color: var(--color-secondary);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-secondary-light);
-					border-color: var(--color-secondary-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-secondary);
-					color: var(--color-secondary-text);
-					border-color: var(--color-secondary-light);
+					color: var(--color-#{$color});
 
 					&:hover:not(:disabled)
 					{
-						background-color: var(--color-secondary);
-						color: var(--color-secondary-light);
-						border-color: var(--color-secondary-light);
+						background-color: transparent;
+						color: var(--color-#{$color}-light);
+					}
+
+					&.active
+					{
+						border-color: var(--color-#{$color}-dark);
 					}
 				}
 			}
-		}
-	}
 
-	&.error
-	{
-		> button, a
-		{
-			background-color: var(--color-error);
-			color: var(--color-error-text);
-
-			&:not(:last-child)
+			&.outlined
 			{
-				border-color: var(--color-error-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-error-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-error-dark);
-				border-color: var(--color-error-light);
-
-				&:hover
-				{
-					color: var(--color-error-light);
-				}
-			}
-		}
-
-		&.text
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-error);
-
-				&:hover:not(:disabled)
+				> button, a
 				{
 					background-color: transparent;
-					color: var(--color-error-light);
-				}
-
-				&.active
-				{
-					border-color: var(--color-error-dark);
-				}
-			}
-		}
-
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-error);
-				border-color: var(--color-error);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-error-light);
-					border-color: var(--color-error-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-error);
-					color: var(--color-error-text);
-					border-color: var(--color-error-light);
+					color: var(--color-#{$color});
+					border-color: var(--color-#{$color});
 
 					&:hover:not(:disabled)
 					{
-						background-color: var(--color-error);
-						color: var(--color-error-light);
-						border-color: var(--color-error-light);
+						background-color: transparent;
+						color: var(--color-#{$color}-light);
+						border-color: var(--color-#{$color}-light);
 					}
-				}
-			}
-		}
-	}
 
-	&.warning
-	{
-		> button, a
-		{
-			background-color: var(--color-warning);
-			color: var(--color-warning-text);
-
-			&:not(:last-child)
-			{
-				border-color: var(--color-warning-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-warning-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-warning-dark);
-				border-color: var(--color-warning-light);
-
-				&:hover
-				{
-					color: var(--color-warning-light);
-				}
-			}
-		}
-
-		&.text
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-warning);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-warning-light);
-				}
-
-				&.active
-				{
-					border-color: var(--color-warning-dark);
-				}
-			}
-		}
-
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-warning);
-				border-color: var(--color-warning);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-warning-light);
-					border-color: var(--color-warning-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-warning);
-					color: var(--color-warning-text);
-					border-color: var(--color-warning-light);
-
-					&:hover:not(:disabled)
+					&.active
 					{
-						background-color: var(--color-warning);
-						color: var(--color-warning-light);
-						border-color: var(--color-warning-light);
-					}
-				}
-			}
-		}
-	}
+						background-color: var(--color-#{$color});
+						color: var(--color-#{$color}-text);
+						border-color: var(--color-#{$color}-light);
 
-	&.info
-	{
-		> button, a
-		{
-			background-color: var(--color-info);
-			color: var(--color-info-text);
-
-			&:not(:last-child)
-			{
-				border-color: var(--color-info-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-info-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-info-dark);
-				border-color: var(--color-info-light);
-
-				&:hover
-				{
-					color: var(--color-info-light);
-				}
-			}
-		}
-
-		&.text
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-info);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-info-light);
-				}
-
-				&.active
-				{
-					border-color: var(--color-info-dark);
-				}
-			}
-		}
-
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-info);
-				border-color: var(--color-info);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-info-light);
-					border-color: var(--color-info-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-info);
-					color: var(--color-info-text);
-					border-color: var(--color-info-light);
-
-					&:hover:not(:disabled)
-					{
-						background-color: var(--color-info);
-						color: var(--color-info-light);
-						border-color: var(--color-info-light);
-					}
-				}
-			}
-		}
-	}
-
-	&.success
-	{
-		> button, a
-		{
-			background-color: var(--color-success);
-			color: var(--color-success-text);
-
-			&:not(:last-child)
-			{
-				border-right-color: var(--color-success-dark);
-			}
-
-			&:hover:not(:disabled)
-			{
-				background-color: var(--color-success-dark);
-			}
-
-			&.active
-			{
-				background-color: var(--color-success-dark);
-				border-color: var(--color-success-light);
-
-				&:hover
-				{
-					color: var(--color-success-light);
-				}
-			}
-		}
-
-		&.text
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-success);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-success-light);
-				}
-
-				&.active
-				{
-					border-color: var(--color-success-dark);
-				}
-			}
-		}
-
-		&.outlined
-		{
-			> button, a
-			{
-				background-color: transparent;
-				color: var(--color-success);
-				border-color: var(--color-success);
-
-				&:hover:not(:disabled)
-				{
-					background-color: transparent;
-					color: var(--color-success-light);
-					border-color: var(--color-success-light);
-				}
-
-				&.active
-				{
-					background-color: var(--color-success);
-					color: var(--color-success-text);
-					border-color: var(--color-success-light);
-
-					&:hover:not(:disabled)
-					{
-						background-color: var(--color-success);
-						color: var(--color-success-light);
-						border-color: var(--color-success-light);
+						&:hover:not(:disabled)
+						{
+							background-color: var(--color-#{$color});
+							color: var(--color-#{$color}-light);
+							border-color: var(--color-#{$color}-light);
+						}
 					}
 				}
 			}
