--- a/dev/proto/ui_catalog/assets/scss/components/inputs/checkbox.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/checkbox.scss
@@ -9,6 +9,9 @@
 //	```
 //------------------------------------------------------------------------------
 
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
+
 .ui_checkbox
 {
 	$icon_ratio: 0.8;
@@ -19,7 +22,7 @@
 	border: 2px solid var(--color-surface-text);
 	cursor: pointer;
 	position: relative;
-	transition: border-color 0.2s 0s ease-in-out;
+	transition: all 0.2s 0s ease-in-out;
 
 	&:before
 	{
@@ -39,7 +42,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		transition: background-color 0.2s 0s ease-in;
+		transition: all 0.2s 0s ease-in;
 	}
 
 
@@ -76,46 +79,15 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	&.primary:checked
+	@each $color in themes.$theme_colors
 	{
-		background-color: var(--color-primary);
-		border-color: var(--color-primary);
-		color: var(--color-primary-text);
-	}
-
-	&.secondary:checked
-	{
-		background-color: var(--color-secondary);
-		border-color: var(--color-secondary);
-		color: var(--color-secondary-text);
-	}
-
-	&.error:checked
-	{
-		background-color: var(--color-error);
-		border-color: var(--color-error);
-		color: var(--color-error-text);
-	}
-
-	&.warning:checked
-	{
-		background-color: var(--color-warning);
-		border-color: var(--color-warning);
-		color: var(--color-warning-text);
-	}
-
-	&.info:checked
-	{
-		background-color: var(--color-info);
-		border-color: var(--color-info);
-		color: var(--color-info-text);
-	}
-
-	&.success:checked
-	{
-		background-color: var(--color-success);
-		border-color: var(--color-success);
-		color: var(--color-info-success);
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}:checked
+		{
+			background-color: var(--color-#{$color});
+			border-color: var(--color-#{$color});
+			color: var(--color-#{$color}-text);
+		}
 	}
 
 
