--- a/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
@@ -12,6 +12,9 @@
 //	```
 //------------------------------------------------------------------------------
 
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
+
 .ui_floating_button
 {
 	display: flex;
@@ -21,7 +24,7 @@
 	border-radius: var(--radius-circle);
 	cursor: pointer;
 	box-shadow: var(--shadow-md);
-	transition: background-color 0.3s 0s ease-in-out;
+	transition: all 0.3s 0s ease-in-out;
 
 
 	//--------------------------------------------------------------------------
@@ -43,82 +46,21 @@
 	//	Colors
 	//--------------------------------------------------------------------------
 
-	&.primary
+	@each $color in themes.$theme_colors
 	{
-		background-color: var(--color-primary);
-		color: var(--color-primary-text);
-
-		&:hover:not(:disabled)
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}
 		{
-			background-color: var(--color-primary-dark);
+			background-color: var(--color-#{$color});
+			color: var(--color-#{$color}-text);
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-#{$color}-dark);
+			}
+
+			.ui_icon { background-color: var(--color-#{$color}-text); }
 		}
-
-		.ui_icon { background-color: var(--color-primary-text); }
-	}
-
-	&.secondary
-	{
-		background-color: var(--color-secondary);
-		color: var(--color-secondary-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-secondary-dark);
-		}
-
-		.ui_icon { background-color: var(--color-secondary-text); }
-	}
-
-	&.error
-	{
-		background-color: var(--color-error);
-		color: var(--color-error-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-error-dark);
-		}
-
-		.ui_icon { background-color: var(--color-error-text); }
-	}
-
-	&.warning
-	{
-		background-color: var(--color-warning);
-		color: var(--color-warning-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-warning-dark);
-		}
-
-		.ui_icon { background-color: var(--color-warning-text); }
-	}
-
-	&.info
-	{
-		background-color: var(--color-info);
-		color: var(--color-info-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-info-dark);
-		}
-
-		.ui_icon { background-color: var(--color-info-text); }
-	}
-
-	&.success
-	{
-		background-color: var(--color-success);
-		color: var(--color-success-text);
-
-		&:hover:not(:disabled)
-		{
-			background-color: var(--color-success-dark);
-		}
-
-		.ui_icon { background-color: var(--color-success-text); }
 	}
 
 
