--- a/dev/proto/ui_catalog/assets/scss/components/inputs/select.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/select.scss
@@ -22,9 +22,7 @@
 	border-radius: var(--radius-sm);
 	cursor: pointer;
 	position: relative;
-	transition:
-		color 0.2s 0s ease-in-out,
-		border-color 0.2s 0s ease-in-out;
+	transition: all 0.2s 0s ease-in-out;
 
 	select
 	{
@@ -76,9 +74,7 @@
 		right: 0;
 		pointer-events: none;
 		transform: translateY(-50%);
-		transition:
-			background-color 0.2s 0s ease-in-out,
-			transform 0.2s 0s ease-in-out;
+		transition: all 0.2s 0s ease-in-out;
 	}
 
 
