--- a/dev/proto/ui_catalog/assets/scss/themes/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/index.scss
@@ -2,5 +2,7 @@
 //	Theme configuration
 //------------------------------------------------------------------------------
 
+$theme_colors: primary, secondary, error, warning, info, success;
+
 @forward "meower_light";
 @forward "meower_dark";
