chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/common/overflow.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/overflow.scss
@@ -2,6 +2,14 @@
 //	Overflow
 //------------------------------------------------------------------------------
 
+.overflow_auto
+{
+	overflow: auto;
+
+	&_x { overflow-x: auto; }
+	&_y { overflow-y: auto; }
+}
+
 .overflow_scroll
 {
 	overflow: scroll;
