--- a/dev/proto/ui_catalog/assets/scss/common/spacer.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/spacer.scss
@@ -2,39 +2,31 @@
 //	Spacer
 //------------------------------------------------------------------------------
 
+
+@use "../functions/string" as string;
+@use "../variables/spaces" as spaces;
+
 //	Margin
 .margin
 {
 	margin: var(--spacing-md);
 
-	&_3xs { margin: var(--spacing-3xs); }
-	&_2xs { margin: var(--spacing-2xs); }
-	&_xs { margin: var(--spacing-xs); }
-	&_sm { margin: var(--spacing-sm); }
-	&_md { margin: var(--spacing-md); }
-	&_lg { margin: var(--spacing-lg); }
-	&_xl { margin: var(--spacing-xl); }
-	&_2xl { margin: var(--spacing-2xl); }
-	&_3xl { margin: var(--spacing-3xl); }
-	&_4xl { margin: var(--spacing-4xl); }
-	&_5xl { margin: var(--spacing-5xl); }
+	@each $space in spaces.$spaces
+	{
+		$class_name: string.str-replace(#{$space}, "-", "_");
+		&_#{$class_name} { margin: var(--spacing-#{$space}); }
+	}
 
 	//	Top
 	&_top
 	{
 		margin: var(--spacing-md) 0 0 0;
 
-		&_3xs { margin: var(--spacing-3xs) 0 0 0; }
-		&_2xs { margin: var(--spacing-2xs) 0 0 0; }
-		&_xs { margin: var(--spacing-xs) 0 0 0; }
-		&_sm { margin: var(--spacing-sm) 0 0 0; }
-		&_md { margin: var(--spacing-md) 0 0 0; }
-		&_lg { margin: var(--spacing-lg) 0 0 0; }
-		&_xl { margin: var(--spacing-xl) 0 0 0; }
-		&_2xl { margin: var(--spacing-2xl) 0 0 0; }
-		&_3xl { margin: var(--spacing-3xl) 0 0 0; }
-		&_4xl { margin: var(--spacing-4xl) 0 0 0; }
-		&_5xl { margin: var(--spacing-5xl) 0 0 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: var(--spacing-#{$space}) 0 0 0; }
+		}
 	}
 
 	//	Right
@@ -42,17 +34,11 @@
 	{
 		margin: 0 var(--spacing-md) 0 0;
 
-		&_3xs { margin: 0 var(--spacing-3xs) 0 0; }
-		&_2xs { margin: 0 var(--spacing-2xs) 0 0; }
-		&_xs { margin: 0 var(--spacing-xs) 0 0; }
-		&_sm { margin: 0 var(--spacing-sm) 0 0; }
-		&_md { margin: 0 var(--spacing-md) 0 0; }
-		&_lg { margin: 0 var(--spacing-lg) 0 0; }
-		&_xl { margin: 0 var(--spacing-xl) 0 0; }
-		&_2xl { margin: 0 var(--spacing-2xl) 0 0; }
-		&_3xl { margin: 0 var(--spacing-3xl) 0 0; }
-		&_4xl { margin: 0 var(--spacing-4xl) 0 0; }
-		&_5xl { margin: 0 var(--spacing-5xl) 0 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: 0 var(--spacing-#{$space}) 0 0; }
+		}
 	}
 
 	//	Bottom
@@ -60,17 +46,11 @@
 	{
 		margin: 0 0 var(--spacing-md) 0;
 
-		&_3xs { margin: 0 0 var(--spacing-3xs) 0; }
-		&_2xs { margin: 0 0 var(--spacing-2xs) 0; }
-		&_xs { margin: 0 0 var(--spacing-xs) 0; }
-		&_sm { margin: 0 0 var(--spacing-sm) 0; }
-		&_md { margin: 0 0 var(--spacing-md) 0; }
-		&_lg { margin: 0 0 var(--spacing-lg) 0; }
-		&_xl { margin: 0 0 var(--spacing-xl) 0; }
-		&_2xl { margin: 0 0 var(--spacing-2xl) 0; }
-		&_3xl { margin: 0 0 var(--spacing-3xl) 0; }
-		&_4xl { margin: 0 0 var(--spacing-4xl) 0; }
-		&_5xl { margin: 0 0 var(--spacing-5xl) 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: 0 0 var(--spacing-#{$space}) 0; }
+		}
 	}
 
 	//	Left
@@ -78,17 +58,11 @@
 	{
 		margin: 0 0 0 var(--spacing-md);
 
-		&_3xs { margin: 0 0 0 var(--spacing-3xs); }
-		&_2xs { margin: 0 0 0 var(--spacing-2xs); }
-		&_xs { margin: 0 0 0 var(--spacing-xs); }
-		&_sm { margin: 0 0 0 var(--spacing-sm); }
-		&_md { margin: 0 0 0 var(--spacing-md); }
-		&_lg { margin: 0 0 0 var(--spacing-lg); }
-		&_xl { margin: 0 0 0 var(--spacing-xl); }
-		&_2xl { margin: 0 0 0 var(--spacing-2xl); }
-		&_3xl { margin: 0 0 0 var(--spacing-3xl); }
-		&_4xl { margin: 0 0 0 var(--spacing-4xl); }
-		&_5xl { margin: 0 0 0 var(--spacing-5xl); }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: 0 0 0 var(--spacing-#{$space}); }
+		}
 	}
 
 	//	Vertical
@@ -96,17 +70,11 @@
 	{
 		margin: var(--spacing-md) 0;
 
-		&_3xs { margin: var(--spacing-3xs) 0; }
-		&_2xs { margin: var(--spacing-2xs) 0; }
-		&_xs { margin: var(--spacing-xs) 0; }
-		&_sm { margin: var(--spacing-sm) 0; }
-		&_md { margin: var(--spacing-md) 0; }
-		&_lg { margin: var(--spacing-lg) 0; }
-		&_xl { margin: var(--spacing-xl) 0; }
-		&_2xl { margin: var(--spacing-2xl) 0; }
-		&_3xl { margin: var(--spacing-3xl) 0; }
-		&_4xl { margin: var(--spacing-4xl) 0; }
-		&_5xl { margin: var(--spacing-5xl) 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: var(--spacing-#{$space}) 0; }
+		}
 	}
 
 	//	Horizontal
@@ -114,17 +82,11 @@
 	{
 		margin: 0 var(--spacing-md);
 
-		&_3xs { margin: 0 var(--spacing-3xs); }
-		&_2xs { margin: 0 var(--spacing-2xs); }
-		&_xs { margin: 0 var(--spacing-xs); }
-		&_sm { margin: 0 var(--spacing-sm); }
-		&_md { margin: 0 var(--spacing-md); }
-		&_lg { margin: 0 var(--spacing-lg); }
-		&_xl { margin: 0 var(--spacing-xl); }
-		&_2xl { margin: 0 var(--spacing-2xl); }
-		&_3xl { margin: 0 var(--spacing-3xl); }
-		&_4xl { margin: 0 var(--spacing-4xl); }
-		&_5xl { margin: 0 var(--spacing-5xl); }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { margin: 0 var(--spacing-#{$space}); }
+		}
 	}
 }
 
@@ -133,34 +95,22 @@
 {
 	padding: var(--spacing-md);
 
-	&_3xs { padding: var(--spacing-3xs); }
-	&_2xs { padding: var(--spacing-2xs); }
-	&_xs { padding: var(--spacing-xs); }
-	&_sm { padding: var(--spacing-sm); }
-	&_md { padding: var(--spacing-md); }
-	&_lg { padding: var(--spacing-lg); }
-	&_xl { padding: var(--spacing-xl); }
-	&_2xl { padding: var(--spacing-2xl); }
-	&_3xl { padding: var(--spacing-3xl); }
-	&_4xl { padding: var(--spacing-4xl); }
-	&_5xl { padding: var(--spacing-5xl); }
+	@each $space in spaces.$spaces
+	{
+		$class_name: string.str-replace(#{$space}, "-", "_");
+		&_#{$class_name} { padding: var(--spacing-#{$space}); }
+	}
 
 	//	Top
 	&_top
 	{
 		padding: var(--spacing-md) 0 0 0;
 
-		&_3xs { padding: var(--spacing-3xs) 0 0 0; }
-		&_2xs { padding: var(--spacing-2xs) 0 0 0; }
-		&_xs { padding: var(--spacing-xs) 0 0 0; }
-		&_sm { padding: var(--spacing-sm) 0 0 0; }
-		&_md { padding: var(--spacing-md) 0 0 0; }
-		&_lg { padding: var(--spacing-lg) 0 0 0; }
-		&_xl { padding: var(--spacing-xl) 0 0 0; }
-		&_2xl { padding: var(--spacing-2xl) 0 0 0; }
-		&_3xl { padding: var(--spacing-3xl) 0 0 0; }
-		&_4xl { padding: var(--spacing-4xl) 0 0 0; }
-		&_5xl { padding: var(--spacing-5xl) 0 0 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: var(--spacing-#{$space}) 0 0 0; }
+		}
 	}
 
 	//	Right
@@ -168,17 +118,11 @@
 	{
 		padding: 0 var(--spacing-md) 0 0;
 
-		&_3xs { padding: 0 var(--spacing-3xs) 0 0; }
-		&_2xs { padding: 0 var(--spacing-2xs) 0 0; }
-		&_xs { padding: 0 var(--spacing-xs) 0 0; }
-		&_sm { padding: 0 var(--spacing-sm) 0 0; }
-		&_md { padding: 0 var(--spacing-md) 0 0; }
-		&_lg { padding: 0 var(--spacing-lg) 0 0; }
-		&_xl { padding: 0 var(--spacing-xl) 0 0; }
-		&_2xl { padding: 0 var(--spacing-2xl) 0 0; }
-		&_3xl { padding: 0 var(--spacing-3xl) 0 0; }
-		&_4xl { padding: 0 var(--spacing-4xl) 0 0; }
-		&_5xl { padding: 0 var(--spacing-5xl) 0 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: 0 var(--spacing-#{$space}) 0 0; }
+		}
 	}
 
 	//	Bottom
@@ -186,17 +130,11 @@
 	{
 		padding: 0 0 var(--spacing-md) 0;
 
-		&_3xs { padding: 0 0 var(--spacing-3xs) 0; }
-		&_2xs { padding: 0 0 var(--spacing-2xs) 0; }
-		&_xs { padding: 0 0 var(--spacing-xs) 0; }
-		&_sm { padding: 0 0 var(--spacing-sm) 0; }
-		&_md { padding: 0 0 var(--spacing-md) 0; }
-		&_lg { padding: 0 0 var(--spacing-lg) 0; }
-		&_xl { padding: 0 0 var(--spacing-xl) 0; }
-		&_2xl { padding: 0 0 var(--spacing-2xl) 0; }
-		&_3xl { padding: 0 0 var(--spacing-3xl) 0; }
-		&_4xl { padding: 0 0 var(--spacing-4xl) 0; }
-		&_5xl { padding: 0 0 var(--spacing-5xl) 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: 0 0 var(--spacing-#{$space}) 0; }
+		}
 	}
 
 	//	Left
@@ -204,17 +142,11 @@
 	{
 		padding: 0 0 0 var(--spacing-md);
 
-		&_3xs { padding: 0 0 0 var(--spacing-3xs); }
-		&_2xs { padding: 0 0 0 var(--spacing-2xs); }
-		&_xs { padding: 0 0 0 var(--spacing-xs); }
-		&_sm { padding: 0 0 0 var(--spacing-sm); }
-		&_md { padding: 0 0 0 var(--spacing-md); }
-		&_lg { padding: 0 0 0 var(--spacing-lg); }
-		&_xl { padding: 0 0 0 var(--spacing-xl); }
-		&_2xl { padding: 0 0 0 var(--spacing-2xl); }
-		&_3xl { padding: 0 0 0 var(--spacing-3xl); }
-		&_4xl { padding: 0 0 0 var(--spacing-4xl); }
-		&_5xl { padding: 0 0 0 var(--spacing-5xl); }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: 0 0 0 var(--spacing-#{$space}); }
+		}
 	}
 
 	//	Vertical
@@ -222,17 +154,11 @@
 	{
 		padding: var(--spacing-md) 0;
 
-		&_3xs { padding: var(--spacing-3xs) 0; }
-		&_2xs { padding: var(--spacing-2xs) 0; }
-		&_xs { padding: var(--spacing-xs) 0; }
-		&_sm { padding: var(--spacing-sm) 0; }
-		&_md { padding: var(--spacing-md) 0; }
-		&_lg { padding: var(--spacing-lg) 0; }
-		&_xl { padding: var(--spacing-xl) 0; }
-		&_2xl { padding: var(--spacing-2xl) 0; }
-		&_3xl { padding: var(--spacing-3xl) 0; }
-		&_4xl { padding: var(--spacing-4xl) 0; }
-		&_5xl { padding: var(--spacing-5xl) 0; }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: var(--spacing-#{$space}) 0; }
+		}
 	}
 
 	//	Horizontal
@@ -240,16 +166,10 @@
 	{
 		padding: 0 var(--spacing-md);
 
-		&_3xs { padding: 0 var(--spacing-3xs); }
-		&_2xs { padding: 0 var(--spacing-2xs); }
-		&_xs { padding: 0 var(--spacing-xs); }
-		&_sm { padding: 0 var(--spacing-sm); }
-		&_md { padding: 0 var(--spacing-md); }
-		&_lg { padding: 0 var(--spacing-lg); }
-		&_xl { padding: 0 var(--spacing-xl); }
-		&_2xl { padding: 0 var(--spacing-2xl); }
-		&_3xl { padding: 0 var(--spacing-3xl); }
-		&_4xl { padding: 0 var(--spacing-4xl); }
-		&_5xl { padding: 0 var(--spacing-5xl); }
+		@each $space in spaces.$spaces
+		{
+			$class_name: string.str-replace(#{$space}, "-", "_");
+			&_#{$class_name} { padding: 0 var(--spacing-#{$space}); }
+		}
 	}
 }
