--- a/dev/proto/ui_catalog/assets/scss/variables/icons.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/icons.scss
@@ -7,6 +7,8 @@
 //	- [Font Awesome](https://fontawesome.com)
 //------------------------------------------------------------------------------
 
+$icons: plus, minus, check, caret-up, caret-down, caret-right, caret-left;
+
 :root
 {
 	//	Plus minus
