--- a/dev/proto/ui_catalog/assets/scss/variables/opacities.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/opacities.scss
@@ -2,9 +2,11 @@
 //	Common opacities
 //------------------------------------------------------------------------------
 
+$opacities: none, hover, full;
+
 :root
 {
-	--opacity-0: 0;
+	--opacity-none: 1;
 	--opacity-hover: 0.7;
-	--opacity-100: 1;
+	--opacity-full: 0;
 }
