--- a/dev/proto/ui_catalog/assets/scss/variables/fonts.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/fonts.scss
@@ -2,6 +2,8 @@
 //	Common fonts
 //------------------------------------------------------------------------------
 
+$font_sizes: 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl;
+
 :root
 {
 	//	Font sizes
