--- a/dev/proto/ui_catalog/assets/scss/variables/radii.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/radii.scss
@@ -2,6 +2,8 @@
 //	Common radii
 //------------------------------------------------------------------------------
 
+$radii: 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl, circle;
+
 :root
 {
 	--radius-3xs: 1px;
