--- a/dev/proto/ui_catalog/assets/scss/variables/shadows.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/shadows.scss
@@ -2,9 +2,11 @@
 //	Common shadows
 //------------------------------------------------------------------------------
 
+$shadows: none, sm, md, lg;
+
 :root
 {
-	--shadow-0: 0 0 0 0 rgba(0, 0, 0, 0);
+	--shadow-none: 0 0 0 0 rgba(0, 0, 0, 0);
 	--shadow-sm: 0 0 4px 0 rgba(0, 0, 0, 0.3);
 	--shadow-md: 0 0 8px 0 rgba(0, 0, 0, 0.3);
 	--shadow-lg: 0 0 12px 0 rgba(0, 0, 0, 0.3);
