--- a/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
@@ -2,6 +2,8 @@
 //	Common sizes
 //------------------------------------------------------------------------------
 
+$sizes: 5xs, 4xs, 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl, 9xl, 10xl;
+
 :root
 {
 	--size-5xs: 1px;
@@ -20,4 +22,6 @@
 	--size-6xl: 80px;
 	--size-7xl: 160px;
 	--size-8xl: 320px;
+	--size-9xl: 460px;
+	--size-10xl: 640px;
 }
