--- a/dev/proto/ui_catalog/assets/scss/variables/spaces.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/spaces.scss
@@ -2,6 +2,8 @@
 //	Common spaces
 //------------------------------------------------------------------------------
 
+$spaces: 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl;
+
 :root
 {
 	--spacing-3xs: 1px;
