--- a/dev/proto/ui_catalog/assets/scss/components/decorations/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/decorations/index.scss
@@ -1,8 +1,6 @@
 //------------------------------------------------------------------------------
-//	Component styles
+//	Decoration component
 //------------------------------------------------------------------------------
 
-@forward "datas/index";
-@forward "decorations/index";
-@forward "inputs/index";
-@forward "layouts/index";
+@forward "heading";
+@forward "icon";
