--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
@@ -28,6 +28,7 @@
 		padding: var(--spacing-sm) var(--spacing-lg);
 		cursor: pointer;
 		transition: all 0.3s 0s ease-in-out;
+		white-space: nowrap;
 
 		&:first-child
 		{
