change: Change component classification

--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
@@ -1,6 +1,7 @@
 //------------------------------------------------------------------------------
-//	Decoration component
+//	UI alert
 //------------------------------------------------------------------------------
 
-@forward "heading";
-@forward "icon";
+.ui_alert
+{
+}
