--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/index.scss
@@ -1,8 +1,5 @@
 //------------------------------------------------------------------------------
-//	Data components
+//	Feedback components
 //------------------------------------------------------------------------------
 
-@forward "heading";
-@forward "icon";
-@forward "list";
-@forward "table";
+@forward "alert";
