--- a/dev/proto/ui_catalog/assets/scss/components/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/index.scss
@@ -3,6 +3,6 @@
 //------------------------------------------------------------------------------
 
 @forward "datas/index";
-@forward "decorations/index";
 @forward "inputs/index";
+@forward "feedbacks/index";
 @forward "layouts/index";
