--- a/dev/proto/ui_catalog/assets/scss/components/inputs/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/index.scss
@@ -1,5 +1,5 @@
 //------------------------------------------------------------------------------
-//	Inputs components
+//	Input components
 //------------------------------------------------------------------------------
 
 @forward "button";
