--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/alert.scss
@@ -2,6 +2,68 @@
 //	UI alert
 //------------------------------------------------------------------------------
 
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
+
 .ui_alert
 {
+	display: flex;
+	align-items: center;
+	gap: var(--spacing-md);
+	width: 100%;
+	padding: var(--spacing-sm) var(--spacing-md);
+	border-radius: var(--radius-md);
+
+	&:before
+	{
+		content: "";
+		display: inline-block;
+		width: var(--size-md);
+		height: var(--size-md);
+		mask-size: contain;
+		mask-position: center;
+		mask-repeat: no-repeat;
+		-webkit-mask-size: contain;
+		-webkit-mask-position: center;
+		-webkit-mask-repeat: no-repeat;
+	}
+
+	@each $color in themes.$theme_colors
+	{
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}
+		{
+			background-color: var(--color-#{$color}-light);
+			color: var(--color-#{$color}-text);
+
+			&:before
+			{
+				background-color: var(--color-#{$color}-dark);
+			}
+		}
+	}
+
+	&.error:before
+	{
+		mask-image: var(--icon-svg-circle-exclamation);
+		-webkit-mask-image: var(--icon-svg-circle-exclamation);
+	}
+
+	&.warning:before
+	{
+		mask-image: var(--icon-svg-triangle-exclamation);
+		-webkit-mask-image: var(--icon-svg-triangle-exclamation);
+	}
+
+	&.info:before
+	{
+		mask-image: var(--icon-svg-circle-info);
+		-webkit-mask-image: var(--icon-svg-circle-info);
+	}
+
+	&.success:before
+	{
+		mask-image: var(--icon-svg-circle-check);
+		-webkit-mask-image: var(--icon-svg-circle-check);
+	}
 }
