--- a/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
@@ -70,6 +70,7 @@
 	--color-border: var(--color-blue-grey-accent-4);
 	--color-border-light: var(--color-blue-grey-accent-3);
 	--color-border-dark: var(--color-black);
+	--color-shadow: rgba(0, 0, 0, 0.3);
 
 	//	States
 	--color-disabled: var(--color-grey-lighten-1);
