--- a/dev/proto/ui_catalog/assets/scss/variables/z_indices.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/z_indices.scss
@@ -1,6 +1,11 @@
 //------------------------------------------------------------------------------
-//	Feedback components
+//	Common z indices
 //------------------------------------------------------------------------------
 
-@forward "alert";
-@forward "dialog";
+:root
+{
+	--z-index-background: 0;
+	--z-index-default: 1;
+	--z-index-backdrop: 99;
+	--z-index-dialog: 100;
+}
